@@ -1,5 +1,8 @@
 EQEMu Changelog (Started on Sept 24, 2003 15:50)
 -------------------------------------------------------
+==02/13/2011==
+Trevius: Finalized implementation of Item Faction Mods.  The bonuses now remove if the item is unequiped.
+
 ==02/11/2011==
 Trevius: Implemented item faction modifier stats (i.e. factionmod1, factionamt1).
 Trevius: Added Power Source slot to item stat (charm) scaling.
